<resources>
    <string name="app_name">Share Task</string>
    <string name="title_activity_authentication">Authentication</string>

    <string name="anonymous_sign_in_text">Continue without an account</string>
    <string name="sign_in_text">Sign In</string>
    <string name="sign_in_alt_text">Already have an account</string>
    <string name="sign_up_text">Create an account</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="submit_text">Confirm</string>

    <string name="input_email_text">Email</string>
    <string name="input_name_text">Username</string>
    <string name="input_password_text">Password</string>
    <string name="input_confirm_password_text">Confirm Password</string>

    <string name="tab_item_all_text">All</string>
    <string name="tab_item_personal_text">Personal</string>
    <string name="tab_item_group_text">Group</string>

    <string name="label_thumbnail">Thumbnail Color</string>
    <string name="label_title">Title</string>
    <string name="label_subject">Subject</string>
    <string name="label_description">Description</string>
    <string name="label_type">Type</string>
    <string name="label_personal">Personal</string>
    <string name="label_group">Group</string>

    <string name="label_checkbox">Checkbox</string>
    <string name="label_attached_file">Attached Files</string>
    <string name="label_member">Members</string>

    <string name="modal_member_hint">Enter Member Email</string>
    <string name="modal_checkbox_hint">Enter Checkbox Text</string>

    <string-array name="intro_images">
        <item>ic_placeholder</item>
        <item>ic_placeholder</item>
        <item>ic_placeholder</item>
    </string-array>

    <string-array name="intro_desc">
        <item>This is the description for the first page in the intro</item>
        <item>This is the description for the first page in the intro</item>
        <item>This is the description for the first page in the intro</item>
    </string-array>
</resources>