<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authselection.AuthSelectionFragment">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_intro"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tab_intro"
        app:layout_constraintEnd_toEndOf="@+id/tab_intro"
        app:layout_constraintStart_toStartOf="@+id/tab_intro"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_intro"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toTopOf="@+id/button_signin"
        app:layout_constraintEnd_toEndOf="@+id/button_signin"
        app:layout_constraintStart_toStartOf="@+id/button_signin"
        app:layout_constraintTop_toBottomOf="@+id/view_pager_intro"
        app:tabBackground="@drawable/selector_dot_indicator"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp" />

    <Button
        android:id="@+id/button_signin"
        style="@style/default_button"
        android:text="@string/sign_in_text"
        app:layout_constraintBottom_toTopOf="@+id/button_anonymous"
        app:layout_constraintEnd_toEndOf="@+id/button_anonymous"
        app:layout_constraintStart_toStartOf="@+id/button_anonymous"
        app:layout_constraintTop_toBottomOf="@+id/tab_intro" />

    <Button
        android:id="@+id/button_anonymous"
        style="@style/dark_button"
        android:text="@string/anonymous_sign_in_text"
        app:layout_constraintBottom_toTopOf="@+id/button_signup"
        app:layout_constraintEnd_toEndOf="@+id/button_signup"
        app:layout_constraintStart_toStartOf="@+id/button_signup"
        app:layout_constraintTop_toBottomOf="@+id/button_signin" />

    <Button
        android:id="@+id/button_signup"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/sign_up_text"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_anonymous" />

</androidx.constraintlayout.widget.ConstraintLayout>