<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.shanemaglangit.sharetask.signin.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".signin.SignInFragment">

        <TextView
            android:id="@+id/text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:text="@string/sign_in_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/input_layout_email"
            app:layout_constraintStart_toStartOf="@+id/input_layout_email"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/input_email_text"
            app:error="@{viewModel.emailError}"
            app:hintTextColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/input_layout_password"
            app:layout_constraintEnd_toEndOf="@+id/input_layout_password"
            app:layout_constraintStart_toStartOf="@+id/input_layout_password"
            app:layout_constraintTop_toBottomOf="@+id/text_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.email}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:hint="@string/input_password_text"
            app:error="@{viewModel.passwordError}"
            app:hintTextColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/button_submit"
            app:layout_constraintEnd_toEndOf="@+id/button_submit"
            app:layout_constraintStart_toStartOf="@+id/button_submit"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_email"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewModel.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_submit"
            style="@style/default_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.signIn()}"
            android:text="@string/submit_text"
            app:layout_constraintBottom_toTopOf="@+id/button_signup"
            app:layout_constraintEnd_toEndOf="@+id/button_signup"
            app:layout_constraintStart_toStartOf="@+id/button_signup"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_password" />

        <Button
            android:id="@+id/button_signup"
            style="@style/text_button"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="@{() -> viewModel.navigateToSignUp()}"
            android:text="@string/sign_up_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_submit" />

        <View
            android:id="@+id/loading_overlay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.3"
            android:background="@android:color/black"
            android:elevation="4dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visibility="@{viewModel.authenticatingUser}" />

        <ProgressBar
            android:id="@+id/progress_loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visibility="@{viewModel.authenticatingUser}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>