<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.shanemaglangit.sharetask.newtask.NewTaskViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_thumbnail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_thumbnail"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toTopOf="@+id/view_color_preview"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view_color_preview"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:iconColor="@{viewModel.task.iconColor}"
                    app:layout_constraintBottom_toTopOf="@+id/text_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_thumbnail" />

                <TextView
                    android:id="@+id/text_color"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:iconColor="@{viewModel.task.iconColor}"
                    app:layout_constraintBottom_toBottomOf="@+id/view_color_preview"
                    app:layout_constraintStart_toEndOf="@+id/view_color_preview"
                    app:layout_constraintTop_toTopOf="@+id/view_color_preview"
                    tools:text="#FFFFFF" />

                <TextView
                    android:id="@+id/text_details"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_description"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toTopOf="@+id/edit_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_subject" />

                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_title"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toTopOf="@+id/edit_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_color_preview" />

                <EditText
                    android:id="@+id/edit_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@={viewModel.task.title}"
                    app:layout_constraintBottom_toTopOf="@+id/text_subject"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_title" />

                <TextView
                    android:id="@+id/text_subject"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_subject"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toTopOf="@+id/edit_subject"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_title" />

                <EditText
                    android:id="@+id/edit_subject"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@={viewModel.task.subject}"
                    app:layout_constraintBottom_toTopOf="@+id/text_details"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_subject" />

                <EditText
                    android:id="@+id/edit_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:minLines="5"
                    android:text="@={viewModel.task.description}"
                    app:layout_constraintBottom_toTopOf="@+id/text_type"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_details" />

                <TextView
                    android:id="@+id/text_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_type"
                    android:textColor="@android:color/black"
                    app:hasMembers="@{viewModel.task}"
                    app:layout_constraintBottom_toTopOf="@+id/radio_type"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_description" />

                <RadioGroup
                    android:id="@+id/radio_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checkedButton="@id/radio_button_personal"
                    android:orientation="horizontal"
                    app:hasMembers="@{viewModel.task}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_type">

                    <RadioButton
                        android:id="@+id/radio_button_personal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="18dp"
                        android:text="@string/label_personal" />

                    <RadioButton
                        android:id="@+id/radio_button_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@={viewModel.task.group}"
                        android:text="@string/label_group" />

                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:onClick="@{() -> viewModel.saveTask()}"
            android:src="@drawable/ic_check"
            app:backgroundTint="@color/colorPrimary" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>